--- a/README
+++ b/README
@@ -129,20 +129,6 @@ Here are my testing guidelines:
   prevention strategy.  They also make refactoring really easy, which is nice,
   because I'm really indecisive with my design decisions.
   
-  The structure I'm adopting for most of my tests is to use each test case to
-  test one class at a time.  I then create empty stubs for each of the objects
-  needed to create the class being tested, as well as an instance of said class
-  in the test case's setUp method.  Then, in each test function, I patch in
-  functionality to the stubbed objects.  I use one test function (or more, if
-  there are multiple execution paths) to test each method on the class being
-  tested.  This means that I may have to patch collaborating function on the 
-  tested class as well.
-  
-  When patching methods, I test each of the inputs for an expected value, so 
-  that I can be sure that data is being passed in to the correct parameters in
-  the method being tested.  I also test that each stubbed method is called an 
-  appropriate number of times.
-  
   I created a few decorators to automatically check the method names and 
   parameter order on my stubs and patches.  The class decorator @Stub allows
   you to specify a class to create a stub of.  If you then attempt to create
@@ -150,10 +136,7 @@ Here are my testing guidelines:
   of the original class, an error will be raised.  The function decorator 
   @patch allows you to override a method on a class (or a Stub class), and 
   automatically verifies that the signature of the patch matches a method on 
-  the actual class.  If I have control over the design of a class, then I will
-  always use these decorators.  If I have no control (e.g. with the standard
-  libraries), then I will just create stub classes and methods without the 
-  decorators.
+  the actual class.
   
 - I will not put my PCS userid/password anywhere in this project, and no one
   else should either.  This type of thing should go in the private_info file in 
